tests/fail/elaboration/numeric-literal/mismatched-length.fathom
//~ exit-code = 1

[3, 4] : Array8 12 U32
